--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Beba com Moderação</h1>
-A empresa MELLO é uma renomada fabricante de bebibas alcoólicas,conhecida por sua ampla variedade de produtos de alta qualidade.
+A empresa <strong>MELLO</strong> é uma renomada fabricante de bebibas alcoólicas,conhecida por sua ampla variedade de produtos de alta qualidade.
 Com mais de 50 anos de experiência no mercado,a empresa se destaca pela sua dedicação em oferecer bebidas premium aos consumidores.
 A empresa MELLO possui um portfólio diversificado que inclui vinhos,destilados e cerveja.
 Seus vinhos são produzidos a partir de uvas selecionadase e passam por um rigoroso processo de fermentação e envelhecimento,resultando em sabores
